bluec-tests/tests/invalid/types_bool/implicit_conversion_void2.c
void nothing() {}

int main(void) {
    _Bool b1 = nothing();
    return 0;
}